Handle multiple values for a single option -- rework getValue method
- remove extra brackets
- rework tests